[package]
name = "codecrafters-git"
version = "0.1.0"
authors = ["Manuel Pégourié-Gonnard <mpg@elzevir.fr>"]
license = "WTFPL"
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.5.26", features = ["derive"] }
flate2 = "1.0.34"
hex = "0.4.3"
rand = "0.9.0"
reqwest = { version = "0.12.12", features = ["blocking"] }
sha1 = "0.10.6"
